# scimitar

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  build.bat  readme.md  test.bat  vcpkg.bat  vcpkg.json
app/: CMakeLists.txt  main.cpp
scimitar/: CMakeLists.txt  dependencies.h  preprocessor.h  scimitar.cpp  scimitar.h
scimitar/app/: application.cpp  application.h
scimitar/core/: engine.cpp  engine.h  engine.inl  logger.cpp  logger.h  mediator.h  mediator.inl  system.cpp  system.h  system.inl
scimitar/core/detail/: mediator_queue.h  mediator_queue.inl
scimitar/core/logger/: log_category.cpp  log_category.h  log_message.cpp  log_message.h  log_message.inl  log_sink.cpp  log_sink.h  log_sink.inl
scimitar/geometry/: aa_rectangle.cpp  aa_rectangle.h  direction_2d.cpp  direction_2d.h  extent_2d.cpp  extent_2d.h  point_2d.cpp  point_2d.h
scimitar/gui/: gui.cpp  gui.h  widget.h  window.cpp  window.h  window_win32.cpp
scimitar/input/: input.cpp  input.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h
scimitar/math/: clamp.h  helpers.h  helpers.inl
scimitar/os/: gpu_queue.cpp  gpu_queue.h  os.cpp  os.h  os_win32.cpp  render_device.cpp  render_device.h  render_surface.cpp  render_surface.h  vma_impl.cpp  vsync.h  window.cpp  window.h  window_win32.cpp  window_win32.h
scimitar/renderer/: renderer.cpp  renderer.h
scimitar/util/: algorithm.h  algorithm.inl  bigint.h  biguint.h  biguint.inl  cast.h  cast.inl  concepts.h  debugger.cpp  debugger.h  debugger.inl  endian.h  endian.inl  exception.h  filesystem.cpp  filesystem.h  flat_map.h  flat_map.inl  function.h  function.inl  highres_clock.h  literals.h  literals.inl  memory.h  memory.inl  spin_mutex.cpp  spin_mutex.h  string_util.cpp  string_util.h  string_util.inl  threads.cpp  threads.h  timestamp_counter.h  type_traits.h  typemap.h  typemap.inl  unique_resource.h  unique_resource.inl
scimitar/util/codec/: base_n.cpp  base_n.h  base_n.inl  codepage_1252.cpp  codepage_1252.h  codepage_1252.inl  utf.cpp  utf.h  utf.inl
unittest/: CMakeLists.txt  unittest.cpp  unittest.h
unittest/util/: test_algorithm.cpp  test_base_n.cpp  test_biguint.cpp  test_endian.cpp  test_function.cpp  test_stringutil.cpp  test_unique_resource.cpp
